@@ -1,5 +1,5 @@
 
-R version 3.0.1 Patched (2013-07-17 r63343) -- "Good Sport"
+R version 3.0.1 Patched (2013-08-18 r63615) -- "Good Sport"
 Copyright (C) 2013 The R Foundation for Statistical Computing
 Platform: x86_64-apple-darwin12.4.0 (64-bit)
 
@@ -55,7 +55,7 @@ Loading required package: plyr
 
 Attaching package: ‘reshape’
 
-The following object is masked from ‘package:plyr’:
+The following objects are masked from ‘package:plyr’:
 
     rename, round_any
 
@@ -64,11 +64,11 @@ Loading required package: IRanges
 
 Attaching package: ‘IRanges’
 
-The following object is masked from ‘package:reshape’:
+The following objects are masked from ‘package:reshape’:
 
     expand, rename
 
-The following object is masked from ‘package:plyr’:
+The following objects are masked from ‘package:plyr’:
 
     desc, rename
 
@@ -89,7 +89,7 @@ locfit 1.5-9.1 	 2013-03-22
 
 Attaching package: ‘locfit’
 
-The following object is masked from ‘package:GenomicRanges’:
+The following objects are masked from ‘package:GenomicRanges’:
 
     left, right
 
@@ -104,6 +104,12 @@ Loading required package: IlluminaHumanMethylation450kannotation.ilmn.v1.2
 [preprocessQuantile] Mapping to genome.
 [preprocessQuantile] Fixing outliers.
 [preprocessQuantile] Quantile normalizing.
+> 
+> ## save(Mset.raw, file = "Mset.raw.rda")
+> ## save(Mset.illumina, file = "Mset.illumina.rda")
+> ## save(Mset.swan, file = "Mset.swan.rda")
+> save(Mset.quantile, file = "Mset.quantile.rda")
+> 
 > 
 > testDigests <- list(
 +     preprocessRaw = list(Meth = minfi:::.digestMatrix(getMeth(Mset.raw)),
@@ -120,10 +126,10 @@ Loading required package: IlluminaHumanMethylation450kannotation.ilmn.v1.2
 > 
 > gc()
            used  (Mb) gc trigger   (Mb)  max used   (Mb)
-Ncells  4936103 263.7    7700734  411.3   7700734  411.3
-Vcells 91658314 699.3  175015781 1335.3 174983790 1335.1
+Ncells  4936580 263.7    7700734  411.3   7700734  411.3
+Vcells 91659489 699.4  175017273 1335.3 174985006 1335.1
 > sessionInfo()                         
-R version 3.0.1 Patched (2013-07-17 r63343)
+R version 3.0.1 Patched (2013-08-18 r63615)
 Platform: x86_64-apple-darwin12.4.0 (64-bit)
 
 locale:
@@ -138,30 +144,32 @@ other attached packages:
  [2] minfiData_0.3.4                                       
  [3] IlluminaHumanMethylation450kannotation.ilmn.v1.2_0.1.3
  [4] IlluminaHumanMethylation450kmanifest_0.4.0            
- [5] minfi_1.7.11                                          
- [6] bumphunter_1.1.10                                     
+ [5] minfi_1.7.12                                          
+ [6] bumphunter_1.1.11                                     
  [7] locfit_1.5-9.1                                        
  [8] iterators_1.0.6                                       
  [9] foreach_1.4.1                                         
-[10] Biostrings_2.29.14                                    
-[11] GenomicRanges_1.13.35                                 
+[10] Biostrings_2.29.15                                    
+[11] GenomicRanges_1.13.36                                 
 [12] XVector_0.1.0                                         
-[13] IRanges_1.19.19                                       
+[13] IRanges_1.19.24                                       
 [14] reshape_0.8.4                                         
 [15] plyr_1.8                                              
-[16] lattice_0.20-15                                       
+[16] lattice_0.20-21                                       
 [17] Biobase_2.21.6                                        
-[18] BiocGenerics_0.7.3                                    
+[18] BiocGenerics_0.7.4                                    
 
 loaded via a namespace (and not attached):
  [1] base64_1.1            beanplot_1.1          codetools_0.2-8      
- [4] doRNG_1.5.3           grid_3.0.1            illuminaio_0.3.2     
- [7] itertools_0.1-1       limma_3.17.16         MASS_7.3-27          
-[10] matrixStats_0.8.5     mclust_4.1            multtest_2.17.0      
+ [4] doRNG_1.5.3           grid_3.0.1            illuminaio_0.3.5     
+ [7] itertools_0.1-1       limma_3.17.21         MASS_7.3-28          
+[10] matrixStats_0.8.5     mclust_4.2            multtest_2.17.0      
 [13] nor1mix_1.1-4         preprocessCore_1.23.0 R.methodsS3_1.4.4    
 [16] RColorBrewer_1.0-5    siggenes_1.35.0       splines_3.0.1        
 [19] stats4_3.0.1          survival_2.37-4      
 > 
+> rm(list = ls())
+> 
 > proc.time()
    user  system elapsed 
-124.277   8.894 135.804 
+100.261   8.719 113.399 
